--- a/impact-recreation-vibes/src/app/app.component.html
+++ b/impact-recreation-vibes/src/app/app.component.html
@@ -1,6 +1,16 @@
 <header class="toolbar">
-  <div class="left">Vibepact Vibestardization</div>
-  <div class="right">Operating Quarter | Q4 2024</div>
+  <div class="left">
+    <span class="brand">Vizient</span>
+    <span class="separator">|</span>
+    <span class="brand">Impact Vibestandardization</span>
+  </div>
+  <div class="right">
+    <span class="quarter">Viberating Quarter | Q4 2024</span>
+    <span class="separator">|</span>
+    <span class="waffle" aria-label="app navigation">🧇</span>
+    <span class="separator">|</span>
+    <span class="username">Vibey mcViberson</span>
+  </div>
 </header>
 
 <div class="content">
