Add footer with vibe branding

--- a/impact-recreation-vibes/src/app/app.component.html
+++ b/impact-recreation-vibes/src/app/app.component.html
@@ -29,3 +29,12 @@
     </div>
   </section>
 </div>
+
+<footer class="footer">
+  <span class="footer-left">~Vibe~</span>
+  <div class="footer-center">
+    <div>Vibe Viberstization</div>
+    <div>&copy; 2025 Vibeient inc. all vibes reserved</div>
+  </div>
+  <span class="footer-right">Vibes & Vibeditions</span>
+</footer>
