Add Vibeidation search page

--- a/impact-recreation-vibes/src/app/app.component.html
+++ b/impact-recreation-vibes/src/app/app.component.html
@@ -12,7 +12,7 @@
       <a routerLink="/" (click)="toggleMenu()">Dashboard</a>
       <a routerLink="/admin" (click)="toggleMenu()">Admin</a>
       <a routerLink="/vibe-management" (click)="toggleMenu()">Vibe Management</a>
-      <a (click)="toggleMenu()">Vibeidation</a>
+      <a routerLink="/vibeidation-search" (click)="toggleMenu()">Vibeidation search</a>
       <a (click)="toggleMenu()">Vibe Distribution</a>
     </nav>
     <span class="separator">|</span>
