Add Vibe Distribution page

--- a/impact-recreation-vibes/src/app/app.component.html
+++ b/impact-recreation-vibes/src/app/app.component.html
@@ -13,7 +13,7 @@
       <a routerLink="/admin" (click)="toggleMenu()">Admin</a>
       <a routerLink="/vibe-management" (click)="toggleMenu()">Vibe Management</a>
       <a routerLink="/vibeidation-search" (click)="toggleMenu()">Vibeidation search</a>
-      <a (click)="toggleMenu()">Vibe Distribution</a>
+      <a routerLink="/vibe-distribution" (click)="toggleMenu()">Vibe Distribution</a>
     </nav>
     <span class="separator">|</span>
     <span class="username">Vibey mcViberson</span>
