--- a/impact-recreation-vibes/src/app/admin/admin.component.css
+++ b/impact-recreation-vibes/src/app/admin/admin.component.css
@@ -18,7 +18,7 @@
 }
 
 .tab.active {
-  background-color: purple;
+  background-color: #7f5eba;
   color: #fff;
 }
 
@@ -34,7 +34,7 @@
 .suppliers li {
   padding: 4px 0;
   cursor: pointer;
-  color: purple;
+  color: #7f5eba;
 }
 
 .selected {
@@ -53,7 +53,7 @@ label {
 }
 
 .count {
-  background-color: purple;
+  background-color: #7f5eba;
   color: #fff;
   border-radius: 12px;
   padding: 2px 6px;
@@ -69,7 +69,7 @@ label {
 
 .admin-page .categories h3,
 .admin-page .category-detail h4 {
-  background-color: orange;
+  background-color: #ff4e00;
 }
 
 .quarter-header {
