--- a/impact-recreation-vibes/src/styles.css
+++ b/impact-recreation-vibes/src/styles.css
@@ -6,7 +6,7 @@ body {
 
 /* Heading colors */
 h1, h2, h3, h4, h5 {
-  background-color: purple;
+  background-color: #7f5eba;
   color: #fff;
   padding: 4px;
   border-radius: 4px;
