--- a/impact-recreation-vibes/src/app/vibe-management/vibe-management.component.html
+++ b/impact-recreation-vibes/src/app/vibe-management/vibe-management.component.html
@@ -1,4 +1,4 @@
-<div class="management-page">
+<div class="management-page card">
   <nav class="tabs">
     <div class="tab" [class.active]="currentTab === 'signup'" (click)="currentTab='signup'">Sign up</div>
     <div class="tab" [class.active]="currentTab === 'config'" (click)="currentTab='config'">Configuration &amp; Activation</div>
