--- a/impact-recreation-vibes/src/app/vibeidation-search/vibeidation-search.component.html
+++ b/impact-recreation-vibes/src/app/vibeidation-search/vibeidation-search.component.html
@@ -1,4 +1,4 @@
-<div class="vibeidation-page">
+<div class="vibeidation-page card">
   <nav class="tabs">
     <div class="tab active">Vibeidation search</div>
   </nav>
